Fix basic problem with delete sync